# rcli

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.txt  cliff.toml  justfile  test.http
.github/workflows/: build.yml
assets/: base64.txt  blake3.txt  encrypted-key.txt  encrypted.txt
src/: cli.rs  csv.rs  lib.rs  main.rs  utils.rs
src/biz/: b64.rs  csv_convert.rs  gen_pass.rs  http_server.rs  jwt.rs  mod.rs  text.rs  text_chacha20.rs  text_encrypt.rs
src/cli/: b64.rs  cli.rs  csv.rs  gen_pass.rs  http.rs  jwt.rs  mod.rs  text.rs  text_encrypt.rs
