[package]
name = "rcli"
version = "0.1.0"
authors = ["cuisongliu <cuisongliu@qq.com>"]
edition = "2021"
description = "rcli, a rusty-hermit application"
repository = "https://github.com/rust-learn-days/rcli"
license-file = "LICENSE"
[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
