[package]
name = "rcli"
version = "0.1.0"
authors = ["cuisongliu <cuisongliu@qq.com>"]
edition = "2021"
description = "rcli, a rusty-hermit application"
repository = "https://github.com/rust-learn-days/rcli"
license-file = "LICENSE"
[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
colored = "2.1.0"
jsonxf = "1.1"
serde_yaml = "0.9.34+deprecated"
toml = "0.8.14"
rand = "0.8.5"
zxcvbn = "2"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
log = "0.4.21"
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
tracing-subscriber = "0.3.18"
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = {version = "0.5.2",features =  ["compression-full", "cors", "trace", "fs"]}
enum_dispatch = "0.3.13"
